Fixed margin for edit and list on mobiles

--- a/client/modules/treo-core/css/treo/treo-dark-theme.css
+++ b/client/modules/treo-core/css/treo/treo-dark-theme.css
@@ -20622,6 +20622,7 @@ button.category:focus {
     #main .detail-button-container,
     #main .overview-filters-container {
         width: 100% !important;
+        margin-left: 0 !important;
     }
 
     .detail .overview,
