--- a/client/modules/treo-core/css/treo/treo-light-theme.css
+++ b/client/modules/treo-core/css/treo/treo-light-theme.css
@@ -19873,6 +19873,7 @@ button.category:focus {
   #main .detail-button-container,
   #main .overview-filters-container {
     width: 100% !important;
+    margin-left: 0 !important;
   }
   .detail .overview,
   .edit .overview,
